--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,14 @@
-# Wevolv3 Website - Static HTML Configuration
-# Updated to use new Darkyn-based static site
+# Site estático - Sem build necessário
+[build]
+  publish = "."
+  command = "echo 'Site estático - nenhum build necessário'"
+
+# Headers para arquivos
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
 
 [[headers]]
   for = "/*.js"
@@ -11,92 +20,8 @@
   [headers.values]
     Content-Type = "text/css"
 
-# Blog routes
+# Redirects para o blog
 [[redirects]]
   from = "/singleblog"
   to = "/singleblog.html"
   status = 200
-
-# Static files
-[[redirects]]
-  from = "/*.html"
-  to = "/:splat.html"
-  status = 200
-
-# Images and assets
-[[redirects]]
-  from = "/images/*"
-  to = "/images/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/css/*"
-  to = "/css/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/js/*"
-  to = "/js/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/fonts/*"
-  to = "/fonts/:splat"
-  status = 200
-
-# Build configuration - No build needed for static HTML
-[build]
-  base = "."
-  publish = "."
-  command = "echo 'No build needed for static site'"
-
-[build.environment]
-  NODE_VERSION = "20.19.0"
-
-[context.production]
-  command = "echo 'Production deploy'"
-  publish = "."
-
-[context.deploy-preview]
-  command = "echo 'Preview deploy'"
-  publish = "."
-
-[context.branch-deploy]
-  command = "echo 'Branch deploy'"
-  publish = "."
-
-# SPA fallback - must be last redirect
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-# Security and optimization headers
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-
-# Cache static assets
-[[headers]]
-  for = "/images/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/fonts/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/css/*"
-  [headers.values]
-    Cache-Control = "public, max-age=86400"
-
-[[headers]]
-  for = "/js/*"
-  [headers.values]
-    Cache-Control = "public, max-age=86400"
