--- a/manifest.json
+++ b/manifest.json
@@ -11,18 +11,12 @@
   "lang": "en",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/images/LOGO.PNG",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/logo.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/wevolv3-logo.png",
+      "src": "/images/LOGO.PNG",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -35,7 +29,7 @@
   },
   "screenshots": [
     {
-      "src": "/logo.png",
+      "src": "/images/LOGO.PNG",
       "sizes": "1280x720",
       "type": "image/png",
       "platform": "wide",
@@ -50,7 +44,7 @@
       "url": "/#contact",
       "icons": [
         {
-          "src": "/favicon.ico",
+          "src": "/images/LOGO.PNG",
           "sizes": "32x32"
         }
       ]
