🔧 Fix: Update Studio redirect to correct Sanity URL
- Updated redirects to use correct Sanity Studio URL
- Changed from wevolv3.sanity.studio to sanity.io/@omH6dEUOk/studio/...
- Removed iframe approach (X-Frame-Options: DENY prevents embedding)
- Now using direct 301 redirect to Sanity Studio

--- a/netlify.toml
+++ b/netlify.toml
@@ -39,13 +39,15 @@
   to = "/singleblog.html"
   status = 200
 
-# Sanity Studio - Editor do blog (hospedado em sanity.io)
+# Sanity Studio - Editor do blog (redirect to Sanity Studio)
 [[redirects]]
   from = "/studio"
-  to = "/studio.html"
-  status = 200
+  to = "https://sanity.io/@omH6dEUOk/studio/oz6fuqwi7pfb9q46syts438l/default"
+  status = 301
+  force = true
 
 [[redirects]]
   from = "/studio/*"
-  to = "/studio.html"
-  status = 200
+  to = "https://sanity.io/@omH6dEUOk/studio/oz6fuqwi7pfb9q46syts438l/default"
+  status = 301
+  force = true
