--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,12 @@
   "lang": "en",
   "icons": [
     {
-      "src": "/images/FAVICON.png",
+      "src": "/images/favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/images/FAVICON.png",
+      "src": "/images/favicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -29,7 +29,7 @@
   },
   "screenshots": [
     {
-      "src": "/images/FAVICON.png",
+      "src": "/images/favicon.png",
       "sizes": "1280x720",
       "type": "image/png",
       "platform": "wide",
@@ -44,7 +44,7 @@
       "url": "/#contact",
       "icons": [
         {
-          "src": "/images/FAVICON.png",
+          "src": "/images/favicon.png",
           "sizes": "32x32"
         }
       ]
