--- a/netlify.toml
+++ b/netlify.toml
@@ -40,14 +40,15 @@
   status = 200
 
 # Sanity Studio - Editor do blog (redirect to Sanity Studio)
+# Using workspace URL to avoid X-Frame-Options issues
 [[redirects]]
   from = "/studio"
-  to = "https://sszuldy6.sanity.studio"
+  to = "https://www.sanity.io/@omH6dEUOk/studio/oz6fuqwi7pfb9q46syts438l/default"
   status = 301
   force = true
 
 [[redirects]]
   from = "/studio/*"
-  to = "https://sszuldy6.sanity.studio"
+  to = "https://www.sanity.io/@omH6dEUOk/studio/oz6fuqwi7pfb9q46syts438l/default"
   status = 301
   force = true
