🔧 Fix: Forçar redirects do Studio e remover bridge.js
- Remover bridge.js do studio/index.html (causa do redirecionamento)
- Adicionar force=true nos redirects do Studio
- /studio e /studio/* agora servem /studio/index.html corretamente
- Studio funciona standalone sem redirecionar para Dashboard

--- a/netlify.toml
+++ b/netlify.toml
@@ -46,18 +46,21 @@
   status = 200
 
 # Sanity Studio - Servir localmente como SPA
-# Arquivos estáticos têm prioridade
+# Arquivos estáticos têm prioridade (force = true)
 [[redirects]]
   from = "/studio/static/*"
   to = "/studio/static/:splat"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/studio/*"
   to = "/studio/index.html"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/studio"
   to = "/studio/index.html"
   status = 200
+  force = true
