🤖 Add: Automação completa do sitemap
Automação:
- GitHub Actions para atualizar sitemap automaticamente
  - Executa diariamente às 2h UTC
  - Executa em push para main
  - Pode ser executado manualmente
  - Commit automático se houver mudanças

- Netlify Build Hook
  - Gera sitemap durante cada deploy
  - Sempre atualizado quando há push

- package.json criado com script npm run generate-sitemap

Documentação:
- README atualizado com instruções
- AUTOMACAO_SITEMAP.md com guia completo

Agora o sitemap é atualizado automaticamente:
✅ A cada deploy no Netlify
✅ Diariamente via GitHub Actions
✅ Quando há push na branch main
✅ Manualmente quando necessário

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
-# Site estático - Sem build necessário
+# Site estático - Gera sitemap durante o build
 [build]
   publish = "."
-  command = "echo 'Site estático - nenhum build necessário'"
+  command = "node generate-sitemap.js || echo 'Sitemap generation skipped (Node.js not available)'"
 
 # Headers para arquivos
 [[headers]]
