🔧 Fix: Corrigir GitHub Actions workflow para sitemap
Correções:
- Adicionar permissions: contents: write no workflow
- Usar GITHUB_TOKEN corretamente
- Melhorar tratamento de erros no script
- Adicionar verificação de status HTTP
- Adicionar verificação de erros da API Sanity
- Configurar fetch-depth: 0 para checkout completo

O workflow agora deve funcionar corretamente e fazer commit automático do sitemap quando houver mudanças.

--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -19,10 +19,15 @@ on:
 jobs:
   update-sitemap:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -45,8 +50,8 @@ jobs:
       - name: Commit and push if changed
         if: steps.verify-changed-files.outputs.changed == 'true'
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add sitemap.xml
           git commit -m "🤖 Auto-update sitemap [skip ci]" || exit 0
           git push
