--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
 [build]
   publish = "."
   command = "node generate-sitemap.js || echo 'Sitemap generation skipped (Node.js not available)'"
+  functions = "netlify/functions"
 
 # Headers para arquivos
 [[headers]]
