Atualizar link do Twitter/X para @wevolv3_media
- Atualizado link do Twitter em todas as páginas HTML
- Atualizado Schema.org JSON-LD no index.html
- Atualizado README.md
- Adicionado script 'dev' no package.json para servidor local

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Wevolv3 Website - Web3 Marketing & Modular Advertising Agency",
   "scripts": {
     "generate-sitemap": "node generate-sitemap.js",
-    "build": "node generate-sitemap.js"
+    "build": "node generate-sitemap.js",
+    "dev": "python3 -m http.server 8000",
+    "start": "python3 -m http.server 8000"
   },
   "keywords": [
     "wevolv3",
