--- a/netlify.toml
+++ b/netlify.toml
@@ -65,3 +65,8 @@
   to = "/studio/index.html"
   status = 200
   force = true
+
+# Edge Function para injetar meta tags Open Graph dinamicamente
+[[edge_functions]]
+  function = "inject-og-tags"
+  path = "/singleblog"
