Adicionar path alternativo para Edge Function (singleblog.html)

--- a/netlify.toml
+++ b/netlify.toml
@@ -70,3 +70,7 @@
 [[edge_functions]]
   function = "inject-og-tags"
   path = "/singleblog"
+
+[[edge_functions]]
+  function = "inject-og-tags"
+  path = "/singleblog.html"
